Fix Lombok Java 17 issue